# QuantLab

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  pyproject.toml  quantlab_mvp_modules.md  repo_structure.txt
.github/workflows/: ci.yml
data/sample/: data_pull_config.json  sample_prices.csv
data/seeds/: sessionrules_v1.yaml  universe_v1.yaml
docs/: QUICKSTART.md
docs/adr/: 0001-market-data-universe-and-schema.md  0002-provider-adapter-and-storage.md  0003-data-quality-policy-mvp.md  0004-calendar-timezone-alignment.md  0005-calendar-baseline-and-overrides.md  0006-sessionrules-close-times.md  0007-storage-mvp-choice.md  0008-provider-choice-stooq.md  0009-raw-prices-guardrails.md  0101-instruments-scope-mvp.md  0102-identifier-contract-data-vs-instruments.md  0103-domain-modeling-pydantic-v2.md  0104-value-objects-units-and-conventions.md  0105-instrument-model-composition-over-inheritance.md  0106-position-semantics-long-only-mvp.md  0107-ortfolio-snapshot-deterministic.md  0108-canonical-json-and-schema-versioning.md  0109-error-model-and-testing-strategy.md  0110-contract-seams-to-pricing-and-risk.md  0201-pricing-scope-mvp.md  (+24 more)
tests/: test_calendar_baseline.py  test_canonical_schema.py  test_data_errors_logging.py  test_golden_snapshots.py  test_ingest_identity.py  test_ingestion_runner.py  test_normalizers.py  test_property_invariants.py  test_provider_adapter.py  test_public_api.py  test_quality_flags_and_reports.py  test_registry.py  test_sanity.py  test_sessionrules_seed.py  test_storage_layout.py  test_universe_seed.py  test_validators.py
(+268 files in other folders)
