[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantlab"
version = "0.0.0"
description = "QuantLab data layer MVP scaffolding."
requires-python = ">=3.10"
authors = [{ name = "QuantLab" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pre-commit==3.6.0",
  "ruff==0.1.9",
  "mypy==1.7.1",
  "pytest==7.4.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py310"
extend-exclude = ["docs"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]

[tool.ruff.lint.isort]
known-first-party = ["quantlab"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
strict_equality = true
ignore_missing_imports = true
warn_return_any = false
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
